--- a/client/index.html
+++ b/client/index.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="A Minecraft clone in 2D." />
+    <meta name="description" content="A Minecraft clone in 2D" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="minecraft 2D" />
+    <meta name="apple-mobile-web-app-title" content="Minecraft 2D" />
 
     <link rel="icon" href="/favicon.ico" />
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="apple-touch-icon" href="/appleIcon120.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/appleIcon180.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="/appleIcon152.png" />
-    <link rel="apple-touch-icon" sizes="167x167" href="/appleIcon167.png" />
+    <link rel="mask-icon" href="/pwa-512x512.png" color="#000000" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
 
     <title>Minecraft 2D</title>
   </head>
